[project]
name = "tlh-agent"
version = "0.1.0"
description = "Automated Tax-Loss Harvesting for Self-Directed Investors"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Kellen Sunderland", email = "kellen.sunderland@gmail.com" }]
keywords = ["tax-loss-harvesting", "investing", "finance", "trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "httpx>=0.27.0",
    "alpaca-py>=0.21.0",
    "pandas>=2.1.0",
    "keyring>=25.0.0",
    "anthropic>=0.40.0",
    "beautifulsoup4>=4.12.0",
    "aiohttp>=3.9.0",
    "openpyxl>=3.1.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "pillow>=10.0.0",
]

[project.scripts]
tlh-agent = "tlh_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tlh_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
